# pyproj_dep_analyze

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  PRD.md  README.md  deps_enriched.json  outdated.json  pyproject.toml
.github/workflows/: ci.yml  default_cicd_public.yml
docs/: dataflow.md
docs/systemdesign/: module_reference.md
notebooks/: Quickstart.ipynb
scripts/: _utils.py
src/pyproj_dep_analyse/: __init__.py  __init__conf__.py  __main__.py  analyzer.py  cli.py  cli_display.py  config.py  config_deploy.py  config_show.py  defaultconfig.toml  dependency_extractor.py  logging_setup.py  models.py  schemas.py  version_resolver.py
src/pyproj_dep_analyze/: __init__.py  __init__conf__.py  __main__.py  analyzer.py  behaviors.py  cli.py  cli_display.py  config.py  config_deploy.py  config_show.py  dependency_extractor.py  index_resolver.py  logging_setup.py  models.py  python_version_parser.py  repo_resolver.py  schemas.py  stats_resolver.py  typed_click.py  version_resolver.py  xxx.md
tests/: conftest.py  test_analyzer.py  test_behaviors.py  test_cli.py  test_config.py  test_config_deploy.py  test_config_show.py  test_index_resolver.py  test_integration.py  test_logging_setup.py  test_metadata.py  test_module_entry.py  test_repo_resolver.py  test_scripts.py  test_version_resolver.py
tests/e2e_outputs/build_system_requires/: pyproject_setuptools_analysis.json  pyproject_setuptools_enriched.json  pyproject_tortoise_tortoise-orm_analysis.json  pyproject_tortoise_tortoise-orm_enriched.json  pyproject_tox_analysis.json  pyproject_tox_enriched.json
tests/e2e_outputs/dependency_groups/: pyproject_apache_airflow_analysis.json  pyproject_apache_airflow_enriched.json  pyproject_langflow-ai_langflow_analysis.json  pyproject_langflow-ai_langflow_enriched.json  pyproject_napari_napari_analysis.json  pyproject_napari_napari_enriched.json
tests/e2e_outputs/hatch_envs_dependencies/: pyproject_marimo_analysis.json  pyproject_marimo_enriched.json  pyproject_mem0_analysis.json  pyproject_mem0_enriched.json  pyproject_prefect_analysis.json  pyproject_prefect_enriched.json
tests/e2e_outputs/optional_dependencies/: pyproject_bentoml_analysis.json  pyproject_bentoml_enriched.json  pyproject_dvc_analysis.json  pyproject_dvc_enriched.json  pyproject_litestar_analysis.json  pyproject_litestar_enriched.json
tests/e2e_outputs/pdm_dependencies/: pyproject_griffe_analysis.json  pyproject_griffe_enriched.json  pyproject_pdm_analysis.json  pyproject_pdm_enriched.json  pyproject_tortoise_orm_analysis.json  pyproject_tortoise_orm_enriched.json
tests/e2e_outputs/poetry_dependencies/: pyproject_poetry_analysis.json  pyproject_poetry_enriched.json  pyproject_strawberry_analysis.json  pyproject_strawberry_enriched.json  pyproject_textual_analysis.json  pyproject_textual_enriched.json
tests/e2e_outputs/poetry_group_dependencies/: pyproject_OpenHands_OpenHands_analysis.json  pyproject_OpenHands_OpenHands_enriched.json  pyproject_awslabs_aws-lambda-powertools-python_analysis.json  pyproject_awslabs_aws-lambda-powertools-python_enriched.json  pyproject_nicegui_analysis.json  pyproject_nicegui_enriched.json
tests/e2e_outputs/project_dependencies/: pyproject_sqlalchemy_analysis.json  pyproject_sqlalchemy_enriched.json  pyproject_unslothai_unsloth_analysis.json  pyproject_unslothai_unsloth_enriched.json  pyproject_zenml-io_zenml_analysis.json  pyproject_zenml-io_zenml_enriched.json
tests/testdata/optional_dependencies/: pyproject_litestar.toml
