[project]
name = "pyproj_dep_analyze"
version = "4.0.3"
description = "Python project dependency analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.8",
    # click is imported directly (cli.py subclasses click.ParamType), so declare it rather
    # than free-riding on rich-click, which only requires click>=8. The floor is 8.4:
    # ParamType became generic there, and EnumChoice subscripts it (TypeError on click<8.4).
    "click>=8.4.2",
    "lib_cli_exit_tools>=2.3.2",
    "lib_log_rich>=6.3.5",
    "lib_layered_config>=5.6.0",
    "httpx2>=2.6.0",
    "pydantic>=2.13.4",
    "rtoml>=0.13.0",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["dependency", "analyzer", "pyproject", "outdated", "version", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/pyproj_dep_analyze"
Repository = "https://github.com/bitranox/pyproj_dep_analyze.git"
Issues = "https://github.com/bitranox/pyproj_dep_analyze/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.21",
  "pyright[nodejs]>=1.1.411",
  "bandit>=1.9.4",
  # 1.5.1 was yanked upstream (unintended breaking changes), so 1.5.0 is the newest usable
  # release; a >=1.5.1 floor has ZERO candidates and makes this extra unresolvable.
  "build>=1.5.0",
  "twine>=6.2.0",
  # codecov-cli is disabled, not dropped: it requires click<8.3.0, which holds click at
  # 8.2.1 (CVE-2026-7246). Worse, bmk requires click>=8.4.2, so uv cannot satisfy both and
  # silently BACKTRACKS bmk to 3.1.7 - this repo stopped receiving bmk updates entirely,
  # with no error. Verified nothing is lost: CI uploads coverage via codecov/codecov-action
  # (.github/workflows/default_cicd_public.yml) and nothing here invokes the CLI.
  # Re-enable once codecov-cli relaxes its click<8.3.0 pin.
  # "codecov-cli>=11.3.1",
  "pip-audit>=2.10.1",
  "textual>=8.2.8",
  "import-linter>=2.13"
]

[project.scripts]
pyproj_dep_analyze = "pyproj_dep_analyze.cli:main"
pyproj-dep-analyze = "pyproj_dep_analyze.cli:main"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/pyproj_dep_analyze"]
include = ["src/pyproj_dep_analyze/py.typed", "src/pyproj_dep_analyze/defaultconfig.toml"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
  ".venv",
  ".venv-win",
  ".venv-bmk",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "-m", "not slow"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "e2e: end-to-end tests with real API calls (implies slow)",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/pyproj_dep_analyze"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 84
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "pyproj_dep_analyze"

[[tool.importlinter.contracts]]
name = "CLI is the top layer"
type = "layers"
layers = [
  "pyproj_dep_analyze.cli",
  "pyproj_dep_analyze.analyzer",
  "pyproj_dep_analyze.index_resolver | pyproj_dep_analyze.repo_resolver | pyproj_dep_analyze.version_resolver",
  "pyproj_dep_analyze.dependency_extractor | pyproj_dep_analyze.python_version_parser",
  "pyproj_dep_analyze.models",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# GHSA-4xh5-x5gv-qwph: py library ReDoS (no fix available, low risk)
# PYSEC-2022-42969: same as above (alias)
# CVE-2025-66418, CVE-2025-66471: urllib3 vulnerabilities (pending upstream fix)
# PYSEC-2022-43012, PYSEC-2025-49, CVE-2024-6345: setuptools vulnerabilities (CI uses older version)
# CVE-2026-25990: Pillow OOB write via crafted PSD image (transitive dev/build dep; fixed upstream in 12.1.1)
# CVE-2026-26007: pyca cryptography small-subgroup attack on SECT curves (transitive via twine/keyring; fixed in 46.0.5)
# CVE-2026-4539: Pygments AdlLexer ReDoS, local-only DoS (transitive via rich; low risk)
# CVE-2026-25645: requests extract_zipped_paths temp-file reuse; helper unused by us (fixed upstream in 2.33.0)
# CVE-2026-44405: paramiko allows SHA-1 for RSA keys; NOT a dependency of this project (shared-venv audit noise), no fix available
ignore-vulns = ["GHSA-4xh5-x5gv-qwph", "PYSEC-2022-42969", "CVE-2025-66418", "CVE-2025-66471", "PYSEC-2022-43012", "PYSEC-2025-49", "CVE-2024-6345", "CVE-2026-25990", "CVE-2026-26007", "CVE-2026-4539", "CVE-2026-25645", "CVE-2026-44405"]
